--- a/ANDROID/NasoSpeech_Android/app/src/main/res/values/strings.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">NasoSpeech_Android</string>
-    <string name="slogan">A tangible and an interactive tool, response to the current state of art in the assessment of hypernasality of CLP patients.</string>
+    <string name="slogan">
+        All copyrights reserved.
+
+
+    </string>
 </resources>
