--- a/ANDROID/NasoSpeech_Android/app/src/main/res/values/strings.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/values/strings.xml
@@ -1,17 +1,14 @@
 <resources>
-    <string name="app_name">NasoSpeech</string>
-    <!--<string name="forgotpassword"><a href="mailto:support@cleverfinger.com.au?Subject=forgot%20Password" target="_top">FORGOT PASSWORD ? </a></string>-->
-    <string name="mainline"> New to Nasospeech ? <a href="mailto:" target="_top"> Sign up </a></string>
-
-    <string name="lostpassword"><a href="mailto:support@cleverfinger.com.au?Subject=Lost%20Password" target="_top">FORGOT PASSWORD ? </a></string>
-
-    <string name="defaultpassword">New to Nasospeech ?  <a href="">Sign up </a> now</string>
+    <string name="app_name"></string>
     <string name="password">Password</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="forgotpasstext">Enter your email address and we will send you a link to reset your password .</string>
+    <string name="confirmpassword">Confirm Password</string>
+    <string name="registerline">New to Nasospeech ?</string>
+    <string name="title_activity_doctor_dashboard">doctor_dashboard</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_forgot__password">Reset Password</string>
 </resources>
