--- a/ANDROID/NasoSpeech_Android/app/src/main/res/values/strings.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="title_activity_appointments">Appointments</string>
+    <string name="title_activity_add_appointment">Add Appointments</string>
 </resources>
